# emu

./: .algokit.toml  .env.emu  .gitignore  README.md  pyproject.toml
emu/: __main__.py  app.py  models.py  utils.py
smart_contracts/: README.md  __main__.py  config.py
smart_contracts/artifacts/emulator/: client.py
smart_contracts/emulator/: application.json  contract.approval.teal  contract.clear.teal  contract.py  deploy_config.py
smart_contracts/helpers/: build.py  deploy.py
tests/: conftest.py  hello_world_test.py  test_emulator.py  test_utils.py
